--- a/templates/user/product/productshow.html
+++ b/templates/user/product/productshow.html
@@ -17,6 +17,8 @@ justify-content: center;
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.4/dist/sweetalert2.min.css">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.4/dist/sweetalert2.all.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 
 
 <main class="main">
@@ -69,7 +71,7 @@ justify-content: center;
                         </div><!-- End .product-gallery -->
                         <!-- Add this to your HTML head section -->
 
-                    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+                    {% comment %} <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> {% endcomment %}
 
                         <script>
                             $(document).ready(function () {
@@ -136,19 +138,44 @@ justify-content: center;
                                     </select>
                                 </div><!-- End .select-custom -->
                             </div>
+                            <br>
 
                             <div class="product-price">
                                 $ {{ variant.0.variant.product.product_price }}
                             </div><!-- End .product-price -->
-
+                            <br>
+                            
                             <div class="product-details-action">
+                              
+                                <button class="add-to-cart-btn btn-product btn-cart "
+                                data-product_id="{{ variant.0.variant.id }}">Add to Cart</button>
+                                <br>
+                                {% comment %} <button class="add-to-wishlist-button" data-variant-id="{{ variant.0.variant.id }}" data-add-size="1">Add to Wishlist</button> {% endcomment %}
 
-                                <button class="add-to-cart-btn btn-product btn-cart"
-                                    data-product_id="{{ variant.0.variant.id }}">Add to Cart</button>
-                                    <button class="btn-product btn-cart"
-                                    data-product_id="{{ variant.0.variant.id }}"><i class="icon-star-o"></i>Add to Wishlist</button>
-                                </div><!-- End .details-action-wrapper -->
-                            </div><!-- End .product-details-action -->
+                             <div>
+                           
+                                
+                                <form method="POST" action="{% url 'add_wishlist1' %}">
+                                    {% csrf_token %}
+                                    
+                               
+                                    <input type="hidden"  value="{{ variant.0.variant.id }}" id="variant_id" name="variant_id" required>
+                                    <input type="hidden"  value="{{ variant.0.variant.product.id }}" id="product_id" name="porduct_id" required>
+                                    <input class="add-to-cart-btn btn-product btn-cart " type="submit"
+                               value='Add to wishlist'>
+                                </form>
+                            </div>
+                            
+                            
+                            
+                            
+                            
+                            {% comment %} <a href="" type="btn" class="btn-product btn-wishlist wish-list" data-product_id="{{ variant.0.variant.id }}" title="Wishlist"><span>Add to Wishlist</span></a> {% endcomment %}
+                                
+                              
+                                
+                            </div><!-- End .details-action-wrapper -->
+                            
 
                         </div><!-- End .product-details -->
                     </div><!-- End .col-md-6 -->
@@ -308,11 +335,11 @@ justify-content: center;
                         </a>
 
                         <div class="product-action-vertical">
-                            <a href="#" class="btn-product-icon btn-wishlist btn-expandable"  data-product_id="{{ variant.0.variant.id }}"><span>add to wishlist</span></a>
+                            <a href="" class="btn-product-icon btn-wishlist btn-expandable"  data-product_id="{{ variant.0.variant.id }}"><span>add to wishlist</span></a>
                         </div><!-- End .product-action-vertical -->
 
                         <div class="product-action">
-                            <a href="#" class="btn-product btn-cart" data-product_id="{{ variant.0.variant.id }}"><span>add to cart</span></a>
+                            <a href="#"  class="btn-product btn-cart" data-product_id="{{ variant.0.variant.id }}"><span>add to cart</span></a>
                         </div><!-- End .product-action -->
                     </figure><!-- End .product-media -->
 
@@ -337,105 +364,47 @@ justify-content: center;
     </div><!-- End .page-content -->
 </main><!-- End .main -->
 
+<script>
+    $(document).ready(function () {
+        $(".add-to-wishlist-button").click(function () {
+            var variant_id = $(this).data('variant-id');
+            var add_size = $(this).data('add-size');
+            console.log(variant_id,add_size,'ssssssssssssssssssssssssssss')
+            $.ajax({
+                url: '/add_wishlist/', 
+                type: 'POST',
+                data: {
+                    variant_id: variant_id,
+                    add_size: add_size,
+                    csrfmiddlewaretoken: '{{ csrf_token }}' 
+                },
+                success: function (response) {
         
-
-
-<!-- Add this to your HTML head section -->
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script>
-    $('.add-to-cart-btn').click(function (e) {
-        e.preventDefault();
-
-        var product_id = $(this).data('product_id');
-        var add_qty = $('#qty-input').val();
-        var add_size = $('select[name="size"]').val();
-
-        // var cart_qty = $('#pro_qty' + product_id).val();  
-        console.log(product_id, add_qty,add_size, 'yyyyyyyyyyyyyyyyyyyyyyy1')
-        $.ajax({
-            method: "POST",
-            {% comment %} url: "{% url 'addcart' %}", {% endcomment %}
-            data: {
-
-                'variant_id': product_id,
-                'add_size':add_size,
-                'add_qty': add_qty,
-                csrfmiddlewaretoken: '{{ csrf_token }}'
-            },
-            success: function (response) {
-
-                console.log(response);
-
-                if (response.status === 'No such prodcut found' || response.status === 'Only few quantity available' || response.status === 'Product already in cart' ) {
-                    swal.fire("Error!", response.status, "error");
-                    $('.cartdata').load(location.href + " .cartdata");
-                } else if (response.status === 'Product added successfully') { 
-                    swal.fire("", response.status, "success");
-                    $('.cartdata').load(location.href + " .cartdata");
-                } else if (response.status === 'you are not login please Login to continue') {
-                    swal.fire("", response.status, "warning");
-                    $('.cartdata').load(location.href + " .cartdata");
-                } 
-                else if (response.status === 'Sorry! this variant not available') {
-                    swal.fire("", response.status, "warning");
-                    $('.cartdata').load(location.href + " .cartdata");
-                } 
-                else {
-                    swal("Error!", response.status, "error");
-                    $('.cartdata').load(location.href + " .cartdata");
+                    console.log(response);
+    
+                    if (response.status === 'No such prodcut found' || response.status === 'Only few quantity available' || response.status === 'Product already in Wishlist' ) {
+                        swal.fire("Error!", response.status, "error");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    } else if (response.status === 'Product added successfully in Wishlist') { 
+                        swal.fire("", response.status, "success");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    } else if (response.status === 'you are not login please Login to continue') {
+                        swal.fire("", response.status, "warning");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    } 
+                    else if (response.status === 'Sorry! this variant not available') {
+                        swal.fire("", response.status, "warning");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    } 
+                    else {
+                        swal("Error!", response.status, "error");
+                        $('.cartdata').load(location.href + " .cartdata");
+                    }
                 }
-            }
+            });
         });
     });
 </script>
 
-
-<script>
-    $('.wish-list').click(function (e) {
-        e.preventDefault();
-
-        var product_id = $(this).data('product_id');
-        var add_size = $('select[name="size"]').val();
-
-        console.log(product_id,add_size, 'yyyyyyyyyyyyyyyyyyyyyyy1')
-        $.ajax({
-            method: "POST",
-            {% comment %} url: "{% url 'addwishlist' %}", {% endcomment %}
-            data: {
-
-                'variant_id': product_id,
-                'add_size':add_size,
-             
-                csrfmiddlewaretoken: '{{ csrf_token }}'
-            },
-            success: function (response) {
-
-                console.log(response);
-
-                if (response.status === 'No such prodcut found' || response.status === 'Only few quantity available' || response.status === 'Product already in Wishlist' ) {
-                    swal.fire("Error!", response.status, "error");
-                    $('.cartdata').load(location.href + " .cartdata");
-                } else if (response.status === 'Product added successfully in Wishlist') { 
-                    swal.fire("", response.status, "success");
-                    $('.cartdata').load(location.href + " .cartdata");
-                } else if (response.status === 'you are not login please Login to continue') {
-                    swal.fire("", response.status, "warning");
-                    $('.cartdata').load(location.href + " .cartdata");
-                } 
-                else if (response.status === 'Sorry! this variant not available') {
-                    swal.fire("", response.status, "warning");
-                    $('.cartdata').load(location.href + " .cartdata");
-                } 
-                else {
-                    swal("Error!", response.status, "error");
-                    $('.cartdata').load(location.href + " .cartdata");
-                }
-            }
-        });
-    });
-</script>
-<!-- Add this before the closing </body> tag of your HTML -->
-<script src="https://unpkg.com/sweetalert2@11.1.4/dist/sweetalert2.all.min.js"></script>
 
 {% endblock %} 
