--- a/templates/user/product/productshow.html
+++ b/templates/user/product/productshow.html
@@ -147,18 +147,33 @@ justify-content: center;
                             
                             <div class="product-details-action">
                               
-                                <button class="add-to-cart-btn btn-product btn-cart "
+                                {% comment %} <button class="add-to-cart-btn btn-product btn-cart "
                                 data-product_id="{{ variant.0.variant.id }}">Add to Cart</button>
                                 <br>
                                 {% comment %} <button class="add-to-wishlist-button" data-variant-id="{{ variant.0.variant.id }}" data-add-size="1">Add to Wishlist</button> {% endcomment %}
 
-                             <div>
-                           
-                                
-                                <form method="POST" action="{% url 'add_wishlist1' %}">
+                                {% comment %}<div> 
+                                {% endcomment %}
+
+                                <form method="POST" action="{% url 'addcart' %}">
                                     {% csrf_token %}
                                     
                                
+                                    <input type="hidden"  value="{{ variant.0.variant.id }}" id="variant_id" name="variant_id", required>
+                                    <input type="hidden"  value="{{ variant.0.variant.id }}" id="variant_id" name="variant_id", required>
+                                    {% comment %} <input type="hidden"  value="{{ variant.0.variant.product.qty }}" id="product_id" name="add_qty", required> {% endcomment %}
+                                    <input type="hidden" value="{{ variant.0.variant.product.qty }}" id="add_qty" name="add_qty" required>
+                                    <input type="hidden" value="{{ variant.0.variant.size.id }}" id="add_qty" name="add_size" required>
+
+
+                                    <input type="hidden"  value="{{ variant.0.variant.product.id }}" id="product_id" name="porduct_id" required>
+                                    <input class="add-to-cart-btn btn-product btn-cart " type="submit"
+                               value='Add to cart'>
+                                </form>
+                                <br>
+                                
+                                <form method="POST" action="{% url 'add_wishlist1' %}">
+                                    {% csrf_token %}
                                     <input type="hidden"  value="{{ variant.0.variant.id }}" id="variant_id" name="variant_id" required>
                                     <input type="hidden"  value="{{ variant.0.variant.product.id }}" id="product_id" name="porduct_id" required>
                                     <input class="add-to-cart-btn btn-product btn-cart " type="submit"
