--- a/templates/user/wishlist/wishlist.html
+++ b/templates/user/wishlist/wishlist.html
@@ -70,7 +70,7 @@
 										</h3><!-- End .product-title -->
 
                                         <h3 class="product-title">
-											{% comment %} <a href="{% url "productshow" i.variants.product.id i.variant.id %}">{{ i.variant.size.size_chart }}</a> {% endcomment %}
+											<a href="#">{{ i.variant.product.product_name }}</a>
 										</h3><!-- End .product-size -->
 
 									</div><!-- End .product -->
