image_back_to_first_settings

--- a/templates/user/home/index.html
+++ b/templates/user/home/index.html
@@ -7,7 +7,6 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 <script src="path-to-owl-carousel/owl.carousel.min.js"></script>
 
-
 <style>
  
 
@@ -38,7 +37,7 @@
 
 
         <main class="main">
-            {% comment %} <div class="container">
+            <div class="container">
                 <div class="intro-slider-container slider-container-ratio mb-2">
                     <div class="intro-slider owl-carousel owl-simple owl-light owl-nav-inside" data-toggle="owl" data-owl-options='{"nav": false}'>
                         <div class="intro-slide">
@@ -55,7 +54,7 @@
 
                                 <div class="intro-price text-white">from $9.99</div><!-- End .intro-price -->
 
-                                <a href="#" class="btn btn-white-primary btn-round">
+                                <a href="category.html" class="btn btn-white-primary btn-round">
                                     <span>SHOP NOW</span>
                                     <i class="icon-long-arrow-right"></i>
                                 </a>
@@ -106,76 +105,7 @@
                     </div><!-- End .intro-slider owl-carousel owl-simple -->
                     <span class="slider-loader"></span><!-- End .slider-loader -->
                 </div><!-- End .intro-slider-container -->
-            </div><!-- End .container --> {% endcomment %}
-{% comment %} banner {% endcomment %}
-
-            <div class="banner-group">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <div class="banner banner-overlay">
-                                        <a href="#">
-                                            <img src="{% static 'template/assets/images/demos/demo-10/banners/banner-1.jpg' %}" alt="Banner">
-                                        </a>
-
-                                        <div class="banner-content banner-content-right">
-                                            <h4 class="banner-subtitle"><a href="#">New Arrivals</a></h4><!-- End .banner-subtitle -->
-                                            <h3 class="banner-title text-white"><a href="#">Sneakers & <br>Athletic Shoes</a></h3><!-- End .banner-title -->
-                                            <a href="#" class="btn btn-outline-white banner-link btn-round">Discover Now</a>
-                                        </div><!-- End .banner-content -->
-                                    </div><!-- End .banner -->
-                                </div><!-- End .col-sm-6 -->
-
-                                <div class="col-sm-6">
-                                    <div class="banner banner-overlay banner-overlay-light">
-                                        <a href="#">
-                                            <img src="{% static 'template/assets/images/demos/demo-10/banners/banner-6.jpg' %}" alt="Banner">
-                                        </a>
-
-                                        <div class="banner-content">
-                                            <h4 class="banner-subtitle bright-black"><a href="#">Clearance</a></h4><!-- End .banner-subtitle -->
-                                            <h3 class="banner-title"><a href="#">Sandals</a></h3><!-- End .banner-title -->
-                                            <div class="banner-text"><a href="#">up to 70% off</a></div><!-- End .banner-text -->
-                                            <a href="#" class="btn btn-outline-gray banner-link btn-round">Shop Now</a>
-                                        </div><!-- End .banner-content -->
-                                    </div><!-- End .banner -->
-                                </div><!-- End .col-sm-6 -->
-                            </div><!-- End .row -->
-
-                            <div class="banner banner-large banner-overlay d-none d-sm-block">
-                                <a href="#">
-                                    <img src="{% static 'template/assets/images/demos/demo-10/banners/banner-3.jpg' %}" alt="Banner">
-                                </a>
-
-                                <div class="banner-content">
-                                    <h4 class="banner-subtitle text-white"><a href="#">On Sale</a></h4><!-- End .banner-subtitle -->
-                                    <h3 class="banner-title text-white"><a href="#">Slip-On Loafers</a></h3><!-- End .banner-title -->
-                                    <div class="banner-text text-white"><a href="#">up to 30% off</a></div><!-- End .banner-text -->
-                                    <a href="#" class="btn btn-outline-white banner-link btn-round">Shop Now</a>
-                                </div><!-- End .banner-content -->
-                            </div><!-- End .banner -->
-                        </div><!-- End .col-lg-8 -->
-
-                        <div class="col-lg-4 d-sm-none d-lg-block">
-                            <div class="banner banner-middle banner-overlay">
-                                <a href="#">
-                                    <img src="{% static 'template/assets/images/demos/demo-10/banners/banner-4.jpg' %}" alt="Banner">
-                                </a>
-
-                                <div class="banner-content banner-content-bottom">
-                                    <h4 class="banner-subtitle text-white"><a href="#">On Sale</a></h4><!-- End .banner-subtitle -->
-                                    <h3 class="banner-title text-white"><a href="#">Amazing <br>Lace Up Boots</a></h3><!-- End .banner-title -->
-                                    <div class="banner-text text-white"><a href="#">from $39.00</a></div><!-- End .banner-text -->
-                                    <a href="#" class="btn btn-outline-white banner-link btn-round">Discover Now</a>
-                                </div><!-- End .banner-content -->
-                            </div><!-- End .banner -->
-                        </div><!-- End .col-lg-4 -->
-                    </div><!-- End .row -->
-                </div><!-- End .container -->
-            </div><!-- End .banner-group -->
-
+            </div><!-- End .container -->
 
             <div class="mb-4"></div><!-- End .mb-4 -->
 
