--- a/templates/user/registrations/signin.html
+++ b/templates/user/registrations/signin.html
@@ -81,5 +81,10 @@
 </script>
 
 
+
+<script src="https://unpkg.com/sweetalert2@11.1.4/dist/sweetalert2.all.min.js"></script>
+
+
+
 {% endblock %}
      
