--- a/templates/admin/adminbrand.html
+++ b/templates/admin/adminbrand.html
@@ -99,7 +99,7 @@
                                 {% csrf_token %}
   
                                 <div class="form-outline mb-4">
-                                  <input name='name' value="{{b.name}}"  type="text" id="form3Example3cg" class="form-control form-control-lg" />
+                                  <input name='name' value="{{b.names}}"  type="text" id="form3Example3cg" class="form-control form-control-lg" />
                                   <label class="form-label" for="form3Example3cg">brand name</label>
                                 </div>
                             
