--- a/templates/admin/adminsignin.html
+++ b/templates/admin/adminsignin.html
@@ -25,7 +25,7 @@
   </div>
   <a>  <button type="submit" class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2">Sign In</button></a>
   <div class="d-flex align-items-center justify-content-center">
-    <p class="fs-4 mb-0 fw-bold">New to Modernize?</p>
+    {% comment %} <p class="fs-4 mb-0 fw-bold">New to Modernize?</p> {% endcomment %}
     <a class="text-primary fw-bold ms-2" href="{% url "adminsignup" %}">Create an account</a>
   </div>
 </form>
